on click function works for Gandalf but stacks enemies avaliable to fight vertically instead of horizontally

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <title>Document</title>
+    <title>Lord of the Rings RPG</title>
 </head>
 
-<body id="background">
+<body>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -22,30 +22,28 @@
         <div class="row">
             <div class="col-md-12" id="character-choice">
                 <div class="row">
-                    <div>
-                    <div id="gandalfCT" class="col-md-2 character-tile">
-                        <div class="character-background">
-                            <p id="characterText">Gandalf</p>
-                            <img  id="gandalfpic" src="assets/images/gandalf.jpg">
-                            <p id="gandalfHP"></p>
+                        <div class="col-md-2 character-tile" id="gandalfCT">
+                            <div class="character-background">
+                                <p id="characterText">Gandalf</p>
+                                <img id="gandalfpic" src="assets/images/gandalf.jpg">
+                                <p id="gandalfHP"></p>
+                            </div>
                         </div>
-                    </div>
-                    </div>
-                    <div class="col-md-2 character-tile">
+                    <div class="col-md-2 character-tile" id = "gimliCT">
                         <div class="character-background">
                             <p id="characterText">Gimli</p>
                             <img id="gimlipic" src="assets/images/gimli.jpg">
                             <p id="gimliHP"></p>
                         </div>
                     </div>
-                    <div class="col-md-2 character-tile">
+                    <div class="col-md-2 character-tile" id = "gollumCT">
                         <div class="character-background">
                             <p id="characterText">Gollum</p>
                             <img id="gollumpic" src="assets/images/gollum.jpg">
                             <p id="gollumHP"></p>
                         </div>
                     </div>
-                    <div class="col-md-2 character-tile">
+                    <div class="col-md-2 character-tile" id = "legolasCT">
                         <div class="character-background">
                             <p id="characterText">Legolas</p>
                             <img id="legolaspic" src="assets/images/legolas.jpg">
@@ -96,7 +94,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/unit-4-game/assets/javascript/game.js"></script>
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
