functions added to choose character, enemies, defender. Created objects for characters to store HP, attack, counter attack. Haven't worked out positioning of character logic or attack button logic yet.

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
         <div class="row">
             <div class="col-md-12" id="character-choice">
                 <div class="row">
-                        <div class="col-md-2 character-tile" id="gandalfCT">
-                            <div class="character-background">
-                                <p id="characterText">Gandalf</p>
-                                <img id="gandalfpic" src="assets/images/gandalf.jpg">
-                                <p id="gandalfHP"></p>
-                            </div>
-                        </div>
-                    <div class="col-md-2 character-tile" id = "gimliCT">
+                    <div class="col-md-2 character-tile" id="gandalfCT">
                         <div class="character-background">
-                            <p id="characterText">Gimli</p>
+                            <p class="characterText">Gandalf</p>
+                            <img id="gandalfpic" src="assets/images/gandalf.jpg">
+                            <p id="gandalfHP"></p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 character-tile" id="gimliCT">
+                        <div class="character-background">
+                            <p class="characterText">Gimli</p>
                             <img id="gimlipic" src="assets/images/gimli.jpg">
                             <p id="gimliHP"></p>
                         </div>
                     </div>
-                    <div class="col-md-2 character-tile" id = "gollumCT">
+                    <div class="col-md-2 character-tile" id="gollumCT">
                         <div class="character-background">
-                            <p id="characterText">Gollum</p>
+                            <p class="characterText">Gollum</p>
                             <img id="gollumpic" src="assets/images/gollum.jpg">
                             <p id="gollumHP"></p>
                         </div>
                     </div>
-                    <div class="col-md-2 character-tile" id = "legolasCT">
+                    <div class="col-md-2 character-tile" id="legolasCT">
                         <div class="character-background">
-                            <p id="characterText">Legolas</p>
+                            <p class="characterText">Legolas</p>
                             <img id="legolaspic" src="assets/images/legolas.jpg">
                             <p id="legolasHP"></p>
                         </div>
@@ -53,45 +53,53 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p id="sectionText"> Your Character</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12" id="your-character">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p id="sectionText"> Enemies Avaliable to Attack </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12" id="enemies-avaliable-to-attack">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <p id="sectionText"> Fight Section </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12" id="fight-section">
-        </div>
-    </div>
-    <button type="button" class="btn btn-dark">Attack</button>
-    <div class="row">
-        <div class="col-md-12">
-            <p id="sectionText"> Defender </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12" id="defender">
-        </div>
-    </div>
 
+        <div class="row">
+            <div class="col-md-12">
+                <p id="sectionText"> Your Character</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="your-character">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p id="sectionText"> Enemies Avaliable to Attack </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="enemies-avaliable-to-attack">
+                <div class="row">
+                    <div class="col-md-2 eataP1 character-tile ">
+                    </div>
+                    <div class="col-md-2 eataP2 character-tile">
+                    </div>
+                    <div class="col-md-2 eataP3 character-tile">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p id="sectionText"> Fight Section </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="fight-section">
+            </div>
+        </div>
+        <button id = "button" type="button" class="btn btn-dark" style="margin: 10px">Attack</button>
+        <div class="row">
+            <div class="col-md-12">
+                <p id="sectionText"> Defender </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" id="defender">
+            </div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
