Changes the background of character tile while in defender section and text color

--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
             <div class="col-md-12" id="character-choice">
                 <div class="row">
                     <div class="col-md-2 character-tile" id="gandalfCT">
-                        <div class="character-background">
-                            <p class="characterText">Gandalf</p>
+                        <div class="neutral-character-background" id="gandalfBackground" >
+                            <p id = "gandalfName" class="characterText">Gandalf</p>
                             <img id="gandalfpic" src="assets/images/gandalf.jpg">
-                            <p id="gandalfHP"></p>
+                            <p id = "gandalfHP" class="gandalfHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gimliCT">
-                        <div class="character-background">
-                            <p class="characterText">Gimli</p>
+                        <div class="neutral-character-background" id="gimliBackground">
+                            <p id = "gimliName" class="characterText">Gimli</p>
                             <img id="gimlipic" src="assets/images/gimli.jpg">
-                            <p id="gimliHP"></p>
+                            <p id = "gimliHP" class="gimliHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gollumCT">
-                        <div class="character-background">
-                            <p class="characterText">Gollum</p>
+                        <div class="neutral-character-background" id="gollumBackground">
+                            <p id = "gollumName" class="characterText">Gollum</p>
                             <img id="gollumpic" src="assets/images/gollum.jpg">
-                            <p id="gollumHP"></p>
+                            <p id = "gollumHP" class="gollumHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="legolasCT">
-                        <div class="character-background">
-                            <p class="characterText">Legolas</p>
+                        <div class="neutral-character-background" id="legolasBackground">
+                            <p id = "legolasName" class="characterText">Legolas</p>
                             <img id="legolaspic" src="assets/images/legolas.jpg">
-                            <p id="legolasHP"></p>
+                            <p id = "legolasHP" class="legolasHP"></p>
                         </div>
                     </div>
                 </div>
