characters move to the correct divs when clicked but do not change color,attack button still not functional

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12" id="character-choice">
-                <div class="row">
+            <div class="col-md-12" >
+                <div class="row" id="character-choice">
                     <div class="col-md-2 character-tile" id="gandalfCT">
                         <div class="neutral-character-background" id="gandalfBackground" >
                             <p id = "gandalfName" class="characterText">Gandalf</p>
@@ -59,10 +59,7 @@
                 <p id="sectionText"> Your Character</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12" id="your-character">
-            </div>
-        </div>
+        <div class="row"id="your-character" ></div>
         <div class="row">
             <div class="col-md-12">
                 <p id="sectionText"> Enemies Avaliable to Attack </p>
@@ -70,13 +67,8 @@
         </div>
         <div class="row">
             <div class="col-md-12" id="enemies-avaliable-to-attack">
-                <div class="row">
-                    <div class="col-md-2 eataP1 character-tile ">
-                    </div>
-                    <div class="col-md-2 eataP2 character-tile">
-                    </div>
-                    <div class="col-md-2 eataP3 character-tile">
-                    </div>
+                <div class="row enemiesrow">
+                    <!-- this is where character divs go -->
                 </div>
             </div>
         </div>
