characters move where they should but there are still some edge cases, attack button knows which is your character and the defender and their object properties. Win Loose part of it doesn't work yet, maybe should be a function that is passed in? still needs css to change based on section character is in. Need to fix edge cases if divs are empty.

--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12" >
+            <div class="col-md-12">
                 <div class="row" id="character-choice">
                     <div class="col-md-2 character-tile" id="gandalfCT">
-                        <div class="neutral-character-background" id="gandalfBackground" >
-                            <p id = "gandalfName" class="characterText">Gandalf</p>
+                        <div class="neutral-character-background" id="gandalfBackground">
+                            <p id="gandalfName" class="characterText">Gandalf</p>
                             <img id="gandalfpic" src="assets/images/gandalf.jpg">
-                            <p id = "gandalfHP" class="gandalfHP"></p>
+                            <p id="gandalfHP" class="gandalfHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gimliCT">
                         <div class="neutral-character-background" id="gimliBackground">
-                            <p id = "gimliName" class="characterText">Gimli</p>
+                            <p id="gimliName" class="characterText">Gimli</p>
                             <img id="gimlipic" src="assets/images/gimli.jpg">
-                            <p id = "gimliHP" class="gimliHP"></p>
+                            <p id="gimliHP" class="gimliHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gollumCT">
                         <div class="neutral-character-background" id="gollumBackground">
-                            <p id = "gollumName" class="characterText">Gollum</p>
+                            <p id="gollumName" class="characterText">Gollum</p>
                             <img id="gollumpic" src="assets/images/gollum.jpg">
-                            <p id = "gollumHP" class="gollumHP"></p>
+                            <p id="gollumHP" class="gollumHP"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="legolasCT">
                         <div class="neutral-character-background" id="legolasBackground">
-                            <p id = "legolasName" class="characterText">Legolas</p>
+                            <p id="legolasName" class="characterText">Legolas</p>
                             <img id="legolaspic" src="assets/images/legolas.jpg">
-                            <p id = "legolasHP" class="legolasHP"></p>
+                            <p id="legolasHP" class="legolasHP"></p>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                 <p id="sectionText"> Your Character</p>
             </div>
         </div>
-        <div class="row"id="your-character" ></div>
+        <div class="row" id="your-character"></div>
         <div class="row">
             <div class="col-md-12">
                 <p id="sectionText"> Enemies Avaliable to Attack </p>
@@ -67,9 +67,7 @@
         </div>
         <div class="row">
             <div class="col-md-12" id="enemies-avaliable-to-attack">
-                <div class="row enemiesrow">
-                    <!-- this is where character divs go -->
-                </div>
+                <div class="row enemiesrow"></div>
             </div>
         </div>
         <div class="row">
@@ -81,7 +79,7 @@
             <div class="col-md-12" id="fight-section">
             </div>
         </div>
-        <button id = "button" type="button" class="btn btn-dark" style="margin: 10px">Attack</button>
+        <button id="button" type="button" class="btn btn-dark" style="margin: 10px">Attack</button>
         <div class="row">
             <div class="col-md-12">
                 <p id="sectionText"> Defender </p>
@@ -89,6 +87,16 @@
         </div>
         <div class="row">
             <div class="col-md-12" id="defender">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" >
+                <p id="your-character-fight-stats">
+
+                </p>
+                <p id="defender-character-fight-stats">
+
+                </p>
             </div>
         </div>
     </div>
