--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12" id="defender">
-            </div>
+            <div class="col-md-12" id="defender"></div>
         </div>
         <div class="row">
             <div class="col-md-12" >
@@ -99,6 +98,7 @@
                 </p>
             </div>
         </div>
+        <button id="restart-button" type="button" class="btn btn-dark" style="margin: 10px">Restart</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
