everthing works except HP portion of reset and no visual class change. Need to clean up code.

--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
                         <div class="neutral-character-background" id="gandalfBackground">
                             <p id="gandalfName" class="characterText">Gandalf</p>
                             <img id="gandalfpic" src="assets/images/gandalf.jpg">
-                            <p id="gandalfHP" class="gandalfHP"></p>
+                            <p id="gandalfHP" class="gandalfHP Gandalf"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gimliCT">
                         <div class="neutral-character-background" id="gimliBackground">
                             <p id="gimliName" class="characterText">Gimli</p>
                             <img id="gimlipic" src="assets/images/gimli.jpg">
-                            <p id="gimliHP" class="gimliHP"></p>
+                            <p id="gimliHP" class="gimliHP Gimli"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="gollumCT">
                         <div class="neutral-character-background" id="gollumBackground">
                             <p id="gollumName" class="characterText">Gollum</p>
                             <img id="gollumpic" src="assets/images/gollum.jpg">
-                            <p id="gollumHP" class="gollumHP"></p>
+                            <p id="gollumHP" class="gollumHP Gollum"></p>
                         </div>
                     </div>
                     <div class="col-md-2 character-tile" id="legolasCT">
                         <div class="neutral-character-background" id="legolasBackground">
                             <p id="legolasName" class="characterText">Legolas</p>
                             <img id="legolaspic" src="assets/images/legolas.jpg">
-                            <p id="legolasHP" class="legolasHP"></p>
+                            <p id="legolasHP" class="legolasHP Legolas"></p>
                         </div>
                     </div>
                 </div>
