--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+        <audio id="LOTTheme">
+                <source src="assets/audio/LOTTheme.mp3" type="audio/mpeg">
+            </audio>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
